WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311015
WTF::Unexpected interface should be congruent with std::unexpected
https://bugs.webkit.org/show_bug.cgi?id=311015
Summary
WTF::Unexpected interface should be congruent with std::unexpected
Abrar Rahman Protyasha
Reported
2026-03-29 03:04:07 PDT
To help ease the eventual transition to the standard version.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-29 03:04:13 PDT
<
rdar://problem/173623209
>
Abrar Rahman Protyasha
Comment 2
2026-03-29 03:09:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61608
EWS
Comment 3
2026-03-29 16:43:13 PDT
Committed
310190@main
(3fe3c3a6ce37): <
https://commits.webkit.org/310190@main
> Reviewed commits have been landed. Closing PR #61608 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug