WTF::Unexpected interface should be congruent with std::unexpected https://bugs.webkit.org/show_bug.cgi?id=311015 rdar://173623209

Reviewed by Richard Robinson.

This is a mechanical patch where s/value/error to make WTF::Unexpected
mirror std::unexpected API. This will make the eventual transition to
the standard version easier.

* Source/WTF/wtf/Expected.h:
(std::experimental::fundamentals_v3::expected::expected):
(std::experimental::fundamentals_v3::operator==):
* Source/WTF/wtf/Unexpected.h:
(std::experimental::fundamentals_v3::unexpected::error const):
(std::experimental::fundamentals_v3::unexpected::error):
(std::experimental::fundamentals_v3::operator==):
(std::experimental::fundamentals_v3::unexpected::value const): Deleted.
(std::experimental::fundamentals_v3::unexpected::value): Deleted.
* Source/WebKit/Platform/IPC/Connection.h:
* Tools/TestWebKitAPI/Tests/WTF/Expected.cpp:
(std::experimental::fundamentals_v3::operator<<):
(TestWebKitAPI::TEST(WTF_Expected, Unexpected)):

Canonical link: https://commits.webkit.org/310190@main